2010-09-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added style parameter to the 
	print_extended_select_for_time function

2010-09-27  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/sound_events.php: fixed the ajax check for when start
	with empty list of events. 

2010-09-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php, operation/events/events_list.php: cleaned
	style source code.

	* operation/menu.php: added subentry in "View events" for "Sound Events".
	
	* operation/events/events_rss.php: added source code for the $id_agent equal
	-2 (this mean that get the agent by text name) and added new check for new
	status.
	
	* operation/events/events.php: added source code for the $id_agent equal -2
	(this mean that get the agent by text name).

2010-09-27  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/agentes/modificar_agente.php: Vertical aligned some icons.
	TO DO: The table should be "migrated" to new table code.

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Fixed few
	foreach loops to avoid notices setting empty array to 
	false variables

2010-09-27  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/users/user_list.php, godmode/users/configure_user.php:
	change the sec url variable to show the menu highlighted.

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Added confirm popup
	to delete event button

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Fixed typo bug

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php: Set default
	value to id_group to avoid notices

2010-09-26  Sancho Lerena <slerena@artica.es>

	* pandora_console.spec: Updated some missing deps.

	* operation/agentes/estado_generalagente.php: Fixed
	notice on empty array.
